--- a/Configure.ui
+++ b/Configure.ui
@@ -222,6 +222,19 @@
        </item>
        <item>
         <widget class="QLineEdit" name="lineEdit_RemoteAppBase"/>
+       </item>	   
+       <item>
+        <widget class="QLabel" name="label_RemoteAppBasePort">
+         <property name="text">
+          <string>NowPlaying provider's base port</string>
+         </property>
+         <property name="buddy">
+          <cstring>lineEdit_RemoteAppBasePort</cstring>
+         </property>
+        </widget>
+       </item>	   
+       <item>
+        <widget class="QLineEdit" name="lineEdit_RemoteAppBasePort"/>
        </item>
        <item>
         <widget class="QPushButton" name="pushButton_RestoreDefaults">
