--- a/CommentPost.ui
+++ b/CommentPost.ui
@@ -109,6 +109,7 @@
      <property name="tabChangesFocus">
       <bool>true</bool>
      </property>
+     <property name="undoRedoEnabled">
       <bool>true</bool>
      </property>
      <property name="acceptRichText">
